# newsletter-generator

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Dockerfile  GEMINI.md  LOCAL_CI_GUIDE.md  Makefile  PRD.md  README.ko.md  README.md  README_template.txt  SETUP_COMPLETE.md  TODOs.md  architecture.md  build_web_exe.py  build_web_exe_enhanced.py  check_quality.py  cleanup_debug.py  cleanup_debug_files.py  config.example.yml  config.yml  env.example  fix_env_setup.py  fix_flake8_auto.py  fix_timestamps.py  main.py  newsletter-test.bat  newsletter-test.sh  newsletter.html  newsletter.md  nixpacks.toml  pyproject.toml  (+25 more)
.githooks/: pre-push
.github/: COMMIT_TEMPLATE.txt  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: review-request.yml
.github/PULL_REQUEST_TEMPLATE/: release_integration.md  repo_hygiene.md
.github/workflows/: README.md  ci.yml  code-quality.yml  deployment.yml  docs-quality.yml  e2e-smoke.yml  email-tests.yml  main-ci.yml  newsletter.yml  ops-safety-monitor.yml  pr-policy-check.yml  rr-lifecycle-close.yml  security-scan.yml  shell-size-gate.yml  test-tools.yml
.release/: baseline.json  reviewer_roles.json
.release/manifests/: release-ci-platform.txt  release-packaging-policy.txt  release-runtime-binary-bootstrap.txt  release-runtime-binary.txt  release-scheduler-reliability.txt
apps/cli/: main.py
apps/experimental/: .env.example  main.py
apps/scheduler/: main.py
apps/web/: main.py
apps/worker/: main.py
config/: config.example.yml  config.yml  template_config.json  test_params.py
debug_files/: .gitkeep
docs/: ARCHITECTURE.md  CHANGELOG.md  DOCUMENT_INVENTORY.md  FIXES_SUMMARY.md  PRD.md  PROJECT_STRUCTURE.md  README.md  UNIFIED_ARCHITECTURE.md  UNIFIED_ARCHITECTURE_SUMMARY.md  WEBSERVICE PRD.md  langsmith_setup.md
docs/archive/: README.md  webservice-prd.md
docs/dev/: AGENTS_GOVERNANCE.md  AGENT_SKILL_REQUEST_PLAYBOOK.md  BRANCH_MAIN_GAP_ANALYSIS.md  CI_CD_GUIDE.md  CODEX_INSTRUCTION_LAYOUT.md  CODE_QUALITY.md  CROSS_PLATFORM_PRODUCT_STRATEGY.md  CROSS_PLATFORM_SUPPORT_PLAN.md  DEVELOPMENT_GUIDE.md  LESSONS_LEARNED.md  LOCAL_CI_GUIDE.md  LONG_TERM_REPO_STRATEGY.md  MAIN_INTEGRATION_EXECUTION_PLAN.md  MULTI_LLM_IMPLEMENTATION_SUMMARY.md  REFACTORING_EXECUTION_PLAN.md  REPO_HYGIENE_POLICY.md  REPO_HYGIENE_STATUS_2026-02-24.md  REVIEWER_ROLE_SETUP.md  RR_REQUEST_TEMPLATE.md  TODOs.md  WORKFLOW_TEMPLATES.md  ci-workflow.md  langsmith_setup.md
docs/developer/: CENTRALIZED_SETTINGS_GUIDE.md
docs/reference/: environment-variables.md  support-policy.md  web-api.md
docs/setup/: INSTALLATION.md  LOCAL_SETUP.md  PYINSTALLER_WINDOWS.md  QUICK_START_GUIDE.md  RAILWAY_DEPLOYMENT.md  WINDOWS_EXE_OPERATIONS.md  WINDOWS_EXE_SMOKE_PLAYBOOK.md  WINDOWS_EXE_UPDATE_CHANNEL.md  WINDOWS_RELEASE_ADMIN_LOG_2026-02-24.md
docs/technical/: LLM_CONFIGURATION.md  adr-0001-architecture-boundaries.md  adr-0002-platform-adapter-pattern.md  (+3 more)
intermediate_processing/: 20250513_095821_collected_articles_processed.json  20250513_095821_collected_articles_raw.json  20250513_230530_collected_articles_processed.json  20250513_230530_collected_articles_raw.json
newsletter/: __init__.py  __main__.py  api.py  article_filter.py  centralized_settings.py  chains.py  chains_categorization.py  chains_compact_flow.py  chains_composition.py  chains_llm_utils.py  chains_no_articles.py  chains_prompts.py  chains_rendering.py  chains_summarization.py  cli.py  cli_diagnostics.py  cli_run.py  cli_test.py  collect.py  compat_env.py  compose.py  config.py  config_manager.py  cost_tracking.py  date_utils.py  deliver.py  extract_common_theme_from_keywords  graph.py  html_utils.py  llm_factory.py  logging_conf.py  main.py  scoring.py  settings.py  sources.py  summarize.py  template_manager.py  template_paths.py  tools.py
newsletter_core/: __init__.py
output/: .gitkeep
pyinstaller_hooks/: hook-newsletter.py
scripts/: apply_pr_metadata.py  check_markdown_links.py  check_markdown_style.py  generate_ops_safety_report.py  measure_module_size.py  ops_safety_smoke.py  release_preflight.py  repo_audit.py  repo_hygiene_policy.json  validate_release_manifest.py
tasks/: __init__.py  lessons.md  todo.md
templates/: newsletter_template.html  newsletter_template_compact.html  newsletter_template_email_compatible.html
tests/: README.md  RESULTS_SUMMARY.md  TEST_CLASSIFICATION_SUMMARY.md  TEST_EXECUTION_GUIDE.md  TEST_REPORT_COMPACT_DEFINITIONS.md  __init__.py  conftest.py  conftest_schedule.py  dependencies.py  helpers.py  mock_google_generativeai.py  mock_langchain_google_genai.py  run_essential_tests.py  run_schedule_tests.py  test_api.py  test_article_filter.py  test_article_filter_integration.py  test_chains.py  test_ci.py  test_collect.py  test_compact.py  test_compact_newsletter.py  test_compose.py  test_config_fix.py  test_cost_tracking.py  test_delivery.py  test_email_compatibility.py  test_email_compatibility_integration.py  test_email_delivery.py  test_graph_date_parser.py  test_improved_search.py  test_isolate_tools.py  test_mail.py  test_minimal.py  test_news_integration.py  test_news_integration_enhanced.py  test_newsletter.py  test_newsletter_mocked.py  test_railway_e2e.py  test_schedule_compatibility.py  (+15 more)
web/: .env.example  AGENTS.md  __init__.py  access_control.py  analytics.py  api_types.py  app.py  archive.py  binary_compatibility.py  cors_config.py  db_analytics.py  db_archive.py  db_core.py  db_history.py  db_presets.py  db_source_policies.py  db_state.py  db_utils.py  debug_test.py  generation_route_actions.py  generation_route_dispatch.py  generation_route_support.py  graceful_shutdown.py  init_database.py  mail.py  newsletter_clients.py  ops_logging.py  path_manager.py  personalization_route_support.py  platform_adapter.py  preset_route_support.py  redis_rate_limiter.py  request_limits.py  requirements.txt  routes_analytics.py  routes_approval.py  routes_archive.py  routes_email_api.py  routes_generation.py  routes_health.py  (+29 more)
(+251 files in other folders)
