[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsletter-generator"
version = "0.1.0"
description = "내부 연구원을 위한 뉴스레터 생성 CLI 도구 - LangChain 및 LangGraph 사용"
readme = "README.md"
authors = [
    {name = "Newsletter Generator Team", email = "example@corp.com"},
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
newsletter = "newsletter.cli:app"

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
]

[tool.setuptools]
packages = ["newsletter"]

[tool.black]
line-length = 88
target-version = ['py38']
